tests/negative/test_decl_repeat_name.orb
fnc main() () {
    sym x:i32 x:i32;
};